GNOME Bugzilla – Bug 776106
v4l2object: Don't check size in a non-list value
Last modified: 2017-02-22 09:20:20 UTC
After commit 1ea9735a I see these error while using the webcam integrated in my laptop: GStreamer-CRITICAL **: gst_value_list_get_size: assertion 'GST_VALUE_HOLDS_LIST (value)' failed The issue is gst_v4l2src_value_simplify() was doing its job of generating a single value, rather than the original list. That why, when getting the list size, a critical warning was raised. This patch takes advantage of the compiler optimizations to verify first if the list was simplified, thus use it directly, otherwise, if it is a list, verify its size.
Created attachment 341968 [details] [review] v4l2object: Don't check size in a non-list value
Attachment 341968 [details] pushed as 6ec3cc7 - v4l2object: Don't check size in a non-list value
Thanks!
In 1.10 as d4afc3bc5be9b6b6d374af0b3dcbd6f8ff8a687d
Wrong ref, 1.10 as 4a57ff75449e1ba525df28c8b99ff9fd566430a3